# canopsis

./: .gitmodules  README.md  jqGridable.Ext.js  jqGridable.css  jqGridable.js
binaries/: .gitignore  INSTALL  common.sh  install.sh  mk_repo
binaries/bootstrap/: canohome.tgz  canolibs.tgz  canotools.tgz  pkgmgr.tgz
examples/: demo1.html  demo2.html  demo3.html
sources/: .gitignore  README.txt  build-install.sh  build-packages.sh  unittest.sh
sources/bootstrap/: install.sh
sources/build.d/: 01_canohome.install  02_canotools.install  03_pkgmgr.install  04_python.install  05_canolibs.install  05_python-libs.install  05_ubik.install  06_ccli.install  07_erlang.install  08_erlang.install  08_rabbitmq-server.install  09_mongodb.install  09_rabbitmq-server.install  10_mongodb.install  11_mongodb.install  12_mongodb-conf.install  13_librabbitmq.install  14_amqp2mongodb.install  15_amqp2engines.install  amqp2brule.install  amqp2mongodb.install  amqp2perfstore.install  apscheduler-libs.install  apscheduler.install  celery.install  clock2amqp.install  cnagios.install  collectd-libs.install  collectd.install  collectd2event.install  gelf2amqp.install  nagios2amqp.install  neb2socket.install  nodejs-libs.install  nodejs.install  pyperfstore.install  sla2mongodb.install  webcore-libs.install  webcore.install  wkhtmltopdf.install
sources/canohome/: .bash_completion  .bash_profile  .vimrc
sources/hyp-daemons/: amqp2ape.py  amqp2couchdb.py  amqp2pnp4nagios.py  amqp2redis.py
sources/hyp-libs/: amqp.py  hypamqp.py  (+2 more)
sources/neb2amqp/lib/rabbitmq-c/: Makefile.am  configure.ac
(+759 files in other folders)
